efficient computation of the gaussian kernel

--- a/KRR_and_KLR.ipynb
+++ b/KRR_and_KLR.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 7,
    "id": "utility-italian",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import time"
    ]
   },
   {
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 2,
    "id": "reverse-sociology",
    "metadata": {},
    "outputs": [],
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 3,
    "id": "coordinate-chassis",
    "metadata": {},
    "outputs": [],
@@ -79,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 4,
    "id": "congressional-authority",
    "metadata": {},
    "outputs": [],
@@ -98,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 20,
    "id": "proprietary-costa",
    "metadata": {},
    "outputs": [],
@@ -117,7 +118,214 @@
     "            K[i,j] = val\n",
     "            K[j,i] = val\n",
     "    return(K)\n",
+    "\n",
+    "# Idea : save some time by dividing by 2*sigma and applying the exponential to the matrix of pairwise distances\n",
+    "# (computed on a loop)\n",
+    "def gaussian_kernel2(X,sigma):\n",
+    "    n = X.shape[0]\n",
+    "    K = np.zeros((n,n)) # zero along the diagonals \n",
+    "    for i in range(n):\n",
+    "        for j in range(i+1,n):\n",
+    "            val = np.linalg.norm(X[i]-X[j])\n",
+    "            K[i,j] = val\n",
+    "            K[j,i] = val\n",
+    "    K = np.exp((-K**2)/(2*sigma))\n",
+    "    return(K)\n",
+    "\n",
+    "# Idea : efficient computation of the pairwise distances\n",
+    "def gaussian_kernel3(X,sigma):\n",
+    "    K = ((X[:, :, None] - X[:, :, None].T) ** 2).sum(1)\n",
+    "    K = np.exp((-K)/(2*sigma))\n",
+    "    return(K)\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dental-dialogue",
+   "metadata": {},
+   "source": [
+    "### Check that all three methods have the same output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "broken-tanzania",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = Xtr0_mat100[:1000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "expressed-conducting",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- 9.411180019378662 seconds ---\n"
+     ]
+    }
+   ],
+   "source": [
+    "start_time = time.time()\n",
+    "K1 = gaussian_kernel(X, 1)\n",
+    "print(\"--- %s seconds ---\" % (time.time() - start_time))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "conditional-research",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- 7.064807891845703 seconds ---\n"
+     ]
+    }
+   ],
+   "source": [
+    "start_time = time.time()\n",
+    "K2 = gaussian_kernel2(X, 1)\n",
+    "print(\"--- %s seconds ---\" % (time.time() - start_time))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "median-laser",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- 0.8858790397644043 seconds ---\n"
+     ]
+    }
+   ],
+   "source": [
+    "start_time = time.time()\n",
+    "K3 = gaussian_kernel3(X,1)\n",
+    "print(\"--- %s seconds ---\" % (time.time() - start_time))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "collect-dependence",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.all(K1 == K2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "immune-bulgaria",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.all(K1 == K3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "universal-authority",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.62449569005189e-14\n"
+     ]
+    }
+   ],
+   "source": [
+    "K_diff = K1 - K3\n",
+    "print(np.linalg.norm(K_diff))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "occupied-nothing",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Value for K1 : 0.9907097748987076, Value for K3: 0.9907097748987077, value difference : -1.1102230246251565e-16\n",
+      "Value for K1 : 0.983944092235294, Value for K3: 0.9839440922352941, value difference : -1.1102230246251565e-16\n",
+      "Value for K1 : 0.9870878669144311, Value for K3: 0.9870878669144312, value difference : -1.1102230246251565e-16\n",
+      "Value for K1 : 0.9883715419167118, Value for K3: 0.9883715419167117, value difference : 1.1102230246251565e-16\n",
+      "Value for K1 : 0.9904757028915513, Value for K3: 0.9904757028915512, value difference : 1.1102230246251565e-16\n",
+      "Value for K1 : 0.9907097748987076, Value for K3: 0.9907097748987077, value difference : -1.1102230246251565e-16\n",
+      "Value for K1 : 0.9904757028915512, Value for K3: 0.9904757028915513, value difference : -1.1102230246251565e-16\n",
+      "Value for K1 : 0.9904757028915512, Value for K3: 0.9904757028915513, value difference : -1.1102230246251565e-16\n",
+      "Value for K1 : 0.9904757028915513, Value for K3: 0.9904757028915512, value difference : 1.1102230246251565e-16\n",
+      "Value for K1 : 0.9904757028915513, Value for K3: 0.9904757028915512, value difference : 1.1102230246251565e-16\n",
+      "Value for K1 : 0.9858058591207269, Value for K3: 0.985805859120727, value difference : -1.1102230246251565e-16\n",
+      "Value for K1 : 0.9907097748987076, Value for K3: 0.9907097748987077, value difference : -1.1102230246251565e-16\n",
+      "Value for K1 : 0.9858058591207269, Value for K3: 0.985805859120727, value difference : -1.1102230246251565e-16\n",
+      "Value for K1 : 0.9904757028915513, Value for K3: 0.9904757028915512, value difference : 1.1102230246251565e-16\n",
+      "Value for K1 : 0.9870878669144311, Value for K3: 0.9870878669144312, value difference : -1.1102230246251565e-16\n",
+      "Value for K1 : 0.9907097748987076, Value for K3: 0.9907097748987077, value difference : -1.1102230246251565e-16\n",
+      "Value for K1 : 0.9883715419167117, Value for K3: 0.9883715419167118, value difference : -1.1102230246251565e-16\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1000):\n",
+    "    if K_diff[0,i] != 0:\n",
+    "        print(f\"Value for K1 : {K1[0,i]}, Value for K3: {K3[0,i]}, value difference : {K_diff[0,i]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "identical-halloween",
+   "metadata": {},
+   "source": [
+    "We can see that the differnce comes at 1e-16. \n",
+    "Given the norm of the difference of K1 and K3, we can consider that both matrices are equal so it is okay to use the third method which is considerably faster."
    ]
   },
   {
@@ -167,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 56,
    "id": "scientific-andrews",
    "metadata": {},
    "outputs": [],
@@ -219,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 57,
    "id": "progressive-respect",
    "metadata": {},
    "outputs": [],
@@ -297,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 58,
    "id": "german-roman",
    "metadata": {},
    "outputs": [],
@@ -317,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 59,
    "id": "vocational-logistics",
    "metadata": {},
    "outputs": [],
@@ -334,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 60,
    "id": "marine-trinidad",
    "metadata": {},
    "outputs": [],
@@ -408,7 +616,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "normal-conducting",
+   "id": "light-recall",
    "metadata": {},
    "source": [
     "## Support Vector Machine approach (SVM)\n",
@@ -439,8 +647,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
-   "id": "communist-accreditation",
+   "execution_count": 61,
+   "id": "defensive-harbor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,8 +660,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
-   "id": "preliminary-intersection",
+   "execution_count": 62,
+   "id": "representative-revolution",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,8 +688,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
-   "id": "answering-sister",
+   "execution_count": 63,
+   "id": "norman-firewall",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 64,
    "id": "criminal-crime",
    "metadata": {},
    "outputs": [],
@@ -582,18 +790,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 65,
    "id": "convinced-warner",
    "metadata": {},
    "outputs": [],
    "source": [
-    "K_tr0 = gaussian_kernel(Xtr0,0.5)\n",
-    "K_tr1 = gaussian_kernel(Xtr1,0.5)\n",
-    "K_tr2 = gaussian_kernel(Xtr2,0.5)\n",
+    "K_tr0 = gaussian_kernel3(Xtr0,0.5)\n",
+    "K_tr1 = gaussian_kernel3(Xtr1,0.5)\n",
+    "K_tr2 = gaussian_kernel3(Xtr2,0.5)\n",
     "\n",
-    "K_val0 = gaussian_kernel(Xval0,0.5)\n",
-    "K_val1 = gaussian_kernel(Xval1,0.5)\n",
-    "K_val2 = gaussian_kernel(Xval2,0.5)"
+    "K_val0 = gaussian_kernel3(Xval0,0.5)\n",
+    "K_val1 = gaussian_kernel3(Xval1,0.5)\n",
+    "K_val2 = gaussian_kernel3(Xval2,0.5)"
    ]
   },
   {
@@ -606,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 66,
    "id": "surrounded-revision",
    "metadata": {
     "scrolled": false
@@ -620,19 +828,19 @@
       "\n",
       "***********lambda = 0***********\n",
       "Training: loss = 497.5500, accuracy = 1.000000\n",
-      "Validation: loss = 883887190.5196, accuracy = 0.483000\n",
+      "Validation: loss = 883887190.5092, accuracy = 0.483000\n",
       "***********lambda = 1e-10***********\n",
       "Training: loss = 497.3042, accuracy = 1.000000\n",
-      "Validation: loss = 880451639.8374, accuracy = 0.483000\n",
+      "Validation: loss = 880451639.5200, accuracy = 0.483000\n",
       "***********lambda = 1e-09***********\n",
       "Training: loss = 495.1282, accuracy = 1.000000\n",
-      "Validation: loss = 850853163.6049, accuracy = 0.484000\n",
+      "Validation: loss = 850853163.6289, accuracy = 0.484000\n",
       "***********lambda = 1e-08***********\n",
       "Training: loss = 476.3027, accuracy = 1.000000\n",
-      "Validation: loss = 640425725.5154, accuracy = 0.481000\n",
+      "Validation: loss = 640425725.6463, accuracy = 0.481000\n",
       "***********lambda = 1e-07***********\n",
       "Training: loss = 393.9756, accuracy = 0.999000\n",
-      "Validation: loss = 160132915.1672, accuracy = 0.487000\n",
+      "Validation: loss = 160132915.1740, accuracy = 0.487000\n",
       "***********lambda = 1e-06***********\n",
       "Training: loss = 309.6085, accuracy = 0.877000\n",
       "Validation: loss = 5538134.4045, accuracy = 0.477000\n",
@@ -661,22 +869,22 @@
       "\n",
       "***********lambda = 0***********\n",
       "Training: loss = 499.8380, accuracy = 1.000000\n",
-      "Validation: loss = 1210568348.5627, accuracy = 0.472000\n",
+      "Validation: loss = 1210568348.7498, accuracy = 0.472000\n",
       "***********lambda = 1e-10***********\n",
       "Training: loss = 499.5660, accuracy = 1.000000\n",
-      "Validation: loss = 1207281354.3232, accuracy = 0.472000\n",
+      "Validation: loss = 1207281354.3489, accuracy = 0.472000\n",
       "***********lambda = 1e-09***********\n",
       "Training: loss = 497.1571, accuracy = 1.000000\n",
-      "Validation: loss = 1178465228.4883, accuracy = 0.472000\n",
+      "Validation: loss = 1178465228.4054, accuracy = 0.472000\n",
       "***********lambda = 1e-08***********\n",
       "Training: loss = 476.2990, accuracy = 1.000000\n",
-      "Validation: loss = 948864320.9190, accuracy = 0.474000\n",
+      "Validation: loss = 948864321.0218, accuracy = 0.474000\n",
       "***********lambda = 1e-07***********\n",
       "Training: loss = 387.3107, accuracy = 0.999000\n",
-      "Validation: loss = 280339586.2509, accuracy = 0.470000\n",
+      "Validation: loss = 280339586.2163, accuracy = 0.470000\n",
       "***********lambda = 1e-06***********\n",
       "Training: loss = 302.5167, accuracy = 0.875000\n",
-      "Validation: loss = 13931546.4284, accuracy = 0.481000\n",
+      "Validation: loss = 13931546.4281, accuracy = 0.481000\n",
       "***********lambda = 1e-05***********\n",
       "Training: loss = 283.0117, accuracy = 0.704000\n",
       "Validation: loss = 292736.6573, accuracy = 0.483000\n",
@@ -702,22 +910,22 @@
       "\n",
       "***********lambda = 0***********\n",
       "Training: loss = 499.9980, accuracy = 1.000000\n",
-      "Validation: loss = 474486842.7924, accuracy = 0.500000\n",
+      "Validation: loss = 228148373.4248, accuracy = 0.489000\n",
       "***********lambda = 1e-10***********\n",
       "Training: loss = 499.7884, accuracy = 1.000000\n",
-      "Validation: loss = 232481788.6871, accuracy = 0.505000\n",
+      "Validation: loss = 232481788.7124, accuracy = 0.505000\n",
       "***********lambda = 1e-09***********\n",
       "Training: loss = 497.9328, accuracy = 1.000000\n",
-      "Validation: loss = 213391233.5040, accuracy = 0.512000\n",
+      "Validation: loss = 213391233.5153, accuracy = 0.512000\n",
       "***********lambda = 1e-08***********\n",
       "Training: loss = 481.7602, accuracy = 1.000000\n",
-      "Validation: loss = 156192530.7423, accuracy = 0.513000\n",
+      "Validation: loss = 156192530.7362, accuracy = 0.513000\n",
       "***********lambda = 1e-07***********\n",
       "Training: loss = 409.6664, accuracy = 1.000000\n",
-      "Validation: loss = 65742016.2273, accuracy = 0.497000\n",
+      "Validation: loss = 65742016.2281, accuracy = 0.497000\n",
       "***********lambda = 1e-06***********\n",
       "Training: loss = 337.5715, accuracy = 0.881000\n",
-      "Validation: loss = 8866593.6462, accuracy = 0.488000\n",
+      "Validation: loss = 8866593.6460, accuracy = 0.488000\n",
       "***********lambda = 1e-05***********\n",
       "Training: loss = 319.3397, accuracy = 0.772000\n",
       "Validation: loss = 236788.0662, accuracy = 0.496000\n",
@@ -765,7 +973,7 @@
    "execution_count": 353,
    "id": "irish-rover",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -848,7 +1056,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "tropical-replication",
+   "id": "involved-momentum",
    "metadata": {},
    "source": [
     "## Testing SVM"
@@ -856,9 +1064,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
-   "id": "excellent-coffee",
-   "metadata": {},
+   "execution_count": 67,
+   "id": "measured-prison",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -948,25 +1158,25 @@
       "\n",
       "---------------  lambda = 1e-10  ---------------\n",
       "Training: loss = 0.4990, accuracy = 1.000000\n",
-      "Validation: loss = 46.7217, accuracy = 0.494000\n",
+      "Validation: loss = 46.7219, accuracy = 0.494000\n",
       "---------------  lambda = 1e-09  ---------------\n",
       "Training: loss = 0.4990, accuracy = 1.000000\n",
-      "Validation: loss = 46.7265, accuracy = 0.494000\n",
+      "Validation: loss = 46.7261, accuracy = 0.494000\n",
       "---------------  lambda = 1e-08  ---------------\n",
       "Training: loss = 0.4990, accuracy = 1.000000\n",
-      "Validation: loss = 46.7179, accuracy = 0.494000\n",
+      "Validation: loss = 46.7178, accuracy = 0.494000\n",
       "---------------  lambda = 1e-07  ---------------\n",
       "Training: loss = 0.4990, accuracy = 1.000000\n",
-      "Validation: loss = 46.7236, accuracy = 0.494000\n",
+      "Validation: loss = 46.7242, accuracy = 0.494000\n",
       "---------------  lambda = 1e-06  ---------------\n",
       "Training: loss = 0.4990, accuracy = 1.000000\n",
-      "Validation: loss = 46.7289, accuracy = 0.494000\n",
+      "Validation: loss = 46.7282, accuracy = 0.494000\n",
       "---------------  lambda = 1e-05  ---------------\n",
       "Training: loss = 0.4990, accuracy = 1.000000\n",
-      "Validation: loss = 46.7208, accuracy = 0.494000\n",
+      "Validation: loss = 46.7207, accuracy = 0.494000\n",
       "---------------  lambda = 0.0001  ---------------\n",
       "Training: loss = 0.5086, accuracy = 0.998000\n",
-      "Validation: loss = 26.6118, accuracy = 0.491000\n",
+      "Validation: loss = 26.6115, accuracy = 0.491000\n",
       "---------------  lambda = 0.001  ---------------\n",
       "Training: loss = 0.7707, accuracy = 0.692000\n",
       "Validation: loss = 0.6539, accuracy = 0.494000\n",
